--- a/src/main/resources/com/example/javachatfx/Authorization.fxml
+++ b/src/main/resources/com/example/javachatfx/Authorization.fxml
@@ -1,13 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.PasswordField?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.text.Font?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" style="-fx-background-color: #2E3348;" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.javachatfx.ChatController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" style="-fx-background-color: #2E3348;" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.javachatfx.ChatController">
     <children>
         <AnchorPane layoutX="-7.0" layoutY="164.0" prefHeight="442.0" prefWidth="806.0" style="-fx-background-color: #FAFAFA;">
             <children>
@@ -33,7 +30,7 @@
                 </Label>
             </children>
         </AnchorPane>
-        <Label layoutX="254.0" layoutY="29.0" prefHeight="109.0" prefWidth="283.0" text="TurboChat" textFill="WHITE">
+        <Label layoutX="254.0" layoutY="29.0" prefHeight="109.0" prefWidth="283.0" text="HurmaChat" textFill="WHITE">
             <font>
                 <Font name="Monospaced Regular" size="50.0" />
             </font>
