--- a/src/main/resources/com/example/javachatfx/ChatWindow.fxml
+++ b/src/main/resources/com/example/javachatfx/ChatWindow.fxml
@@ -1,39 +1,67 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" style="-fx-background-color: #2E3348;" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.javachatfx.ChatWindow">
-    <children>
-        <AnchorPane layoutX="-7.0" layoutY="75.0" prefHeight="531.0" prefWidth="806.0" style="-fx-background-color: #FAFAFA;">
+<BorderPane fx:id="borderPane" maxHeight="620.0" maxWidth="1040.0" prefHeight="620.0" prefWidth="1040.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.javachatfx.ChatWindow">
+    <center>
+        <VBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308">
             <children>
-                <ScrollPane layoutX="350.0" layoutY="14.0" prefHeight="370.0" prefWidth="434.0">
-                    <content>
-                        <AnchorPane fx:id="messagChat" minHeight="0.0" minWidth="0.0" prefHeight="370.0" prefWidth="415.0" />
-                    </content>
+                <ScrollPane fitToHeight="true" fitToWidth="true" hbarPolicy="NEVER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" pannable="true" prefHeight="496.0" vbarPolicy="ALWAYS" vmin="1.0" vvalue="1.0" VBox.vgrow="ALWAYS">
+               <content>
+                  <TextArea fx:id="chatPane" prefHeight="200.0" prefWidth="200.0" />
+               </content>
                 </ScrollPane>
-                <ScrollPane layoutX="24.0" layoutY="14.0" prefHeight="370.0" prefWidth="265.0">
-                    <content>
-                        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="370.0" prefWidth="248.0" />
-                    </content>
-                </ScrollPane>
-                <Button fx:id="sendMessageButton" layoutX="132.0" layoutY="432.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="157.0" style="-fx-background-color: #F39C63;" text="Отправить" textFill="WHITE">
-                    <font>
-                        <Font name="Monospaced Regular" size="20.0" />
-                    </font>
-                </Button>
-                <TextField layoutX="350.0" layoutY="432.0" prefHeight="26.0" prefWidth="434.0" promptText="Введите сообщение">
-                    <font>
-                        <Font name="Monospaced Regular" size="18.0" />
-                    </font>
-                </TextField>
+                <HBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="100.0" VBox.vgrow="NEVER">
+                    <children>
+                        <TextArea fx:id="messageBox" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="100.0" nodeOrientation="LEFT_TO_RIGHT" onKeyPressed="#sendMethod" prefHeight="16.0" prefWidth="698.0" promptText="Enter Message..." scaleShape="false" HBox.hgrow="ALWAYS">
+                            <font>
+                                <Font name="SansSerif Regular" size="14.0" />
+                            </font>
+                        </TextArea>
+                        <Button fx:id="buttonSend" alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#sendButtonAction" prefHeight="43.0" prefWidth="140.0" scaleShape="false" text="Send" textAlignment="CENTER" HBox.hgrow="NEVER" />
+                    </children>
+                </HBox>
             </children>
-        </AnchorPane>
-        <Label layoutX="29.0" layoutY="-12.0" prefHeight="109.0" prefWidth="283.0" text="TurboChat" textFill="WHITE">
-            <font>
-                <Font name="Monospaced Regular" size="50.0" />
-            </font>
-        </Label>
-    </children>
-</AnchorPane>
+        </VBox>
+    </center>
+    <left>
+        <VBox maxHeight="1.7976931348623157E308" BorderPane.alignment="CENTER">
+            <children>
+                <ListView fx:id="userList" focusTraversable="false" maxHeight="1.7976931348623157E308" prefHeight="495.0" prefWidth="217.0" style="-fx-border-image-width: 0;">
+                </ListView>
+            </children>
+        </VBox>
+    </left>
+    <top>
+        <BorderPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="60.0" prefWidth="1040.0" style="-fx-background-color: #031c30;" BorderPane.alignment="CENTER">
+            <center>
+                <ImageView fitHeight="79.0" fitWidth="522.0" pickOnBounds="true" preserveRatio="true" BorderPane.alignment="CENTER">
+                    <BorderPane.margin>
+                        <Insets right="100.0" />
+                    </BorderPane.margin>
+                </ImageView>
+            </center>
+            <right>
+                <HBox prefHeight="24.0" prefWidth="30.0" BorderPane.alignment="CENTER">
+                </HBox>
+            </right>
+            <left>
+                <HBox prefHeight="79.0" prefWidth="385.0" BorderPane.alignment="CENTER">
+                    <children>
+                        <VBox>
+                            <HBox.margin>
+                                <Insets left="10.0" top="30.0" />
+                            </HBox.margin>
+                        </VBox>
+                    </children></HBox>
+            </left>
+        </BorderPane>
+    </top>
+    <rotationAxis>
+        <Point3D />
+    </rotationAxis>
+</BorderPane>
