--- a/src/main/resources/com/example/javachatfx/ChatWindow.fxml
+++ b/src/main/resources/com/example/javachatfx/ChatWindow.fxml
@@ -11,9 +11,9 @@
         <VBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308">
             <children>
                 <ScrollPane fitToHeight="true" fitToWidth="true" hbarPolicy="NEVER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" pannable="true" prefHeight="496.0" vbarPolicy="ALWAYS" vmin="1.0" vvalue="1.0" VBox.vgrow="ALWAYS">
-               <content>
-                  <TextArea fx:id="chatPane" prefHeight="200.0" prefWidth="200.0" />
-               </content>
+                    <content>
+                        <TextArea fx:id="chatPane" prefHeight="200.0" prefWidth="200.0" />
+                    </content>
                 </ScrollPane>
                 <HBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="100.0" VBox.vgrow="NEVER">
                     <children>
@@ -22,7 +22,7 @@
                                 <Font name="SansSerif Regular" size="14.0" />
                             </font>
                         </TextArea>
-                        <Button fx:id="buttonSend" alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="43.0" prefWidth="140.0" scaleShape="false" text="Send" textAlignment="CENTER" HBox.hgrow="NEVER" />
+                        <Button fx:id="buttonSend" alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="43.0" prefWidth="140.0" scaleShape="false" text="SEND" textAlignment="CENTER" HBox.hgrow="NEVER" />
                     </children>
                 </HBox>
             </children>
