--- a/src/main/resources/com/example/javachatfx/Registration.fxml
+++ b/src/main/resources/com/example/javachatfx/Registration.fxml
@@ -1,47 +1,54 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.PasswordField?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.text.Font?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" style="-fx-background-color: #2E3348;" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.javachatfx.ChatController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" style="-fx-background-color: #003049;" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.javachatfx.RegistrationController">
     <children>
         <AnchorPane layoutX="-7.0" layoutY="164.0" prefHeight="442.0" prefWidth="806.0" style="-fx-background-color: #FAFAFA;">
             <children>
-                <Button fx:id="authSignInButton" layoutX="346.0" layoutY="310.0" mnemonicParsing="false" prefHeight="47.0" prefWidth="113.0" style="-fx-background-color: #F39C63;" text="Войти" textFill="WHITE">
+                <Button fx:id="regSignInButton" layoutX="247.0" layoutY="310.0" mnemonicParsing="false" prefHeight="47.0" prefWidth="311.0" style="-fx-background-color: #f77f00;" text="Зарегистрироваться" textFill="WHITE">
                     <font>
-                        <Font name="Monospaced Regular" size="25.0" />
+                        <Font name="Book Antiqua" size="27.0" />
                     </font>
                 </Button>
-                <TextField fx:id="login_field" layoutX="255.0" layoutY="158.0" prefHeight="26.0" prefWidth="290.0" promptText="Логин" style="-fx-background-color: #FAFAFA; -fx-border-color: silver; -fx-border-radius: 5;">
+                <TextField fx:id="reg_login_field" layoutX="55.0" layoutY="105.0" prefHeight="26.0" prefWidth="290.0" promptText="Логин" style="-fx-background-color: #FAFAFA; -fx-border-color: silver; -fx-border-radius: 5;">
                     <font>
                         <Font name="Monospaced Regular" size="18.0" />
                     </font>
                 </TextField>
-                <PasswordField fx:id="password_field" layoutX="255.0" layoutY="221.0" prefHeight="26.0" prefWidth="290.0" promptText="Пароль" style="-fx-background-color: #FAFAFA; -fx-border-color: silver; -fx-border-radius: 5;">
+                <PasswordField fx:id="reg_password_field" layoutX="55.0" layoutY="159.0" prefHeight="26.0" prefWidth="290.0" promptText="Пароль" style="-fx-background-color: #FAFAFA; -fx-border-color: silver; -fx-border-radius: 5;">
                     <font>
                         <Font name="Monospaced Regular" size="18.0" />
                     </font>
                 </PasswordField>
-                <Label layoutX="258.0" layoutY="14.0" prefHeight="110.0" prefWidth="283.0" text="Авторизация" textFill="#666666">
+                <Label layoutX="261.0" prefHeight="110.0" prefWidth="283.0" text="Регистрация" textFill="#666666">
                     <font>
-                        <Font name="Monospaced Regular" size="42.0" />
+                        <Font name="Book Antiqua" size="42.0" />
                     </font>
                 </Label>
+                <TextField fx:id="reg_email_field" layoutX="460.0" layoutY="105.0" prefHeight="26.0" prefWidth="290.0" promptText="Email" style="-fx-background-color: #FAFAFA; -fx-border-color: silver; -fx-border-radius: 5;">
+                    <font>
+                        <Font name="Monospaced Regular" size="18.0" />
+                    </font>
+                </TextField>
+                <TextField fx:id="reg_telephone_field" layoutX="460.0" layoutY="159.0" prefHeight="26.0" prefWidth="290.0" promptText="Телефон" style="-fx-background-color: #FAFAFA; -fx-border-color: silver; -fx-border-radius: 5;">
+                    <font>
+                        <Font name="Monospaced Regular" size="18.0" />
+                    </font>
+                </TextField>
+                <TextField fx:id="reg_age_field" layoutX="346.0" layoutY="221.0" prefHeight="38.0" prefWidth="114.0" promptText="Возраст" style="-fx-background-color: #FAFAFA; -fx-border-color: silver; -fx-border-radius: 5;">
+                    <font>
+                        <Font name="Monospaced Regular" size="18.0" />
+                    </font>
+                </TextField>
             </children>
         </AnchorPane>
-        <Label layoutX="254.0" layoutY="29.0" prefHeight="109.0" prefWidth="283.0" text="TurboChat" textFill="WHITE">
+        <Label layoutX="254.0" layoutY="29.0" prefHeight="109.0" prefWidth="283.0" text="HurmaChat" textFill="WHITE">
             <font>
-                <Font name="Monospaced Regular" size="50.0" />
+                <Font name="Book Antiqua Bold Italic" size="50.0" />
             </font>
         </Label>
-        <Button fx:id="loginSingUpButton" layoutX="600.0" layoutY="52.0" mnemonicParsing="false" prefHeight="32.0" prefWidth="173.0" style="-fx-background-color: #F39C63;" text="Зарегистрироваться" textFill="WHITE">
-            <font>
-                <Font name="Monospaced Regular" size="14.0" />
-            </font>
-        </Button>
     </children>
 </AnchorPane>
